add_subdirectory(bell)
add_subdirectory(display)
add_subdirectory(info)
add_subdirectory(input)
add_subdirectory(kcontrol)
add_subdirectory(kdm)
add_subdirectory(keys)
add_subdirectory(kfm)
add_subdirectory(kpanel)
add_subdirectory(kwm)
add_subdirectory(locale)
#add_subdirectory(samba)
#add_subdirectory(sample)
add_subdirectory(syssound)
add_subdirectory(themes)
